Convenience functions for working with Google APIs to access strain collection spreadsheets.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/Golden gate parts ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/Golden gate parts ingest.ipynb
@@ -9,6 +9,7 @@
     "import toml\n",
     "import re\n",
     "import urllib\n",
+    "import pygsheets\n",
     "import benchlingapi\n",
     "import requests_html"
    ]
@@ -29,7 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import paulssonlab.api as api"
+    "import paulssonlab.api as api\n",
+    "import paulssonlab.cloning.workflow as workflow"
    ]
   },
   {
@@ -68,7 +70,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reference"
+    "# dnaplotlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Google Sheets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PAULSSON_GDRIVE = \"157G6iXC8pfXnI4HoiiRItWc5awDPNhmb\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gc = pygsheets.authorize(service_account_file=\"credentials.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api.google.get_drive_by_path(\n",
+    "    gc.drive.service, \"Strains/LIB_Collection\", root=PAULSSON_GDRIVE\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col = workflow.get_strain_collection_sheets(gc.drive.service, \"LIB\")\n",
+    "col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.get_next_collection_id(gc.open_by_key(col[\"strains\"]).worksheet())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.get_next_collection_id(gc.open_by_key(col[\"oligos\"]).worksheet())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.get_next_collection_id(gc.open_by_key(col[\"plasmids\"]).worksheet())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.get_next_collection_id(\n",
+    "    gc.open_by_key(col[\"parts\"]).worksheet_by_title(\"Parts\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.get_next_collection_id(gc.open_by_key(col[\"parts\"]).worksheet_by_title(\"TUs\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.get_next_collection_id(\n",
+    "    gc.open_by_key(col[\"parts\"]).worksheet_by_title(\"Assemblies\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_plasmid_maps():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = (\n",
+    "    gc.drive.service.files()\n",
+    "    .list(\n",
+    "        q=f\"('{col['plasmid_maps']}' in parents) and (mimeType != 'application/vnd.google-apps.folder')\"\n",
+    "    )\n",
+    "    .execute()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Benchling/Addgene"
    ]
   },
   {
@@ -151,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
