[molecule_counting] added some prototype code for tabularizing data

--- a/paulssonlab/src/paulssonlab/projects/molecule_counting/Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/molecule_counting/Segmentation.ipynb
@@ -25,9 +25,11 @@
     "from itertools import repeat\n",
     "from glob import glob\n",
     "import cachetools\n",
-    "import numpy_indexed\n",
+    "\n",
+    "# import numpy_indexed\n",
     "import pickle\n",
-    "import pyarrow as pa\n",
+    "\n",
+    "# import pyarrow as pa\n",
     "import warnings\n",
     "import os\n",
     "from numbers import Integral\n",
@@ -93,15 +95,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
     "    walltime=\"03:00:00\",\n",
     "    memory=\"6GB\",\n",
     "    local_directory=\"/tmp\",\n",
-    "    log_directory=\"/home/jqs1/projects/molecule-counting/log\",\n",
+    "    log_directory=\"/home/nao5/projects/paulssonlab/paulssonlab/src/paulssonlab/projects/molecule_counting/log\",\n",
     "    cores=1,\n",
     "    processes=1,\n",
-    "    job_extra=[\"-x compute-a-16-163,compute-a-16-164\"],\n",
+    "    #     job_extra=[\"-x compute-a-16-163,compute-a-16-164\"],\n",
     ")\n",
     "# diagnostics_port=('127.0.0.1', 8787),\n",
     "# env_extra=['export PYTHONPATH=\\\"/home/jqs1/projects/matriarch\\\"'])\n",
@@ -188,8 +199,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_filename = \"/n/scratch2/jqs1\"\n",
+    "base_filename = \"/n/scratch2/nao5\"\n",
     "# filenames = glob(os.path.join(base_filename, '190922/*/*photobleaching*.nd2'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!du -hs /home/nao5/scratch/200306/*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls /home/jqs1/scratch/200305"
    ]
   },
   {
@@ -201,18 +230,8 @@
     "# TODO: try segmenting everything in phase (to reduce bias of segmenting in different channels)\n",
     "# G_GR  G_RG  G-R_GR  G-R_RG  R-G_GR  R_GR  R-G_RG  R_RG\n",
     "seg_channel_to_files = {\n",
-    "    \"RFP-PENTA\": [\n",
-    "        \"191312/R_RG/*.nd2\",\n",
-    "        \"191312/R_GR/*.nd2\",\n",
-    "    ],  # missing GFP-PENTA for all but one\n",
-    "    \"GFP-PENTA\": [\n",
-    "        \"191312/G_GR/*.nd2\",\n",
-    "        \"191312/G_RG/*.nd2\",\n",
-    "        \"191312/G-R_GR/GR*.nd2\",  # missing RFP-PENTA for all but two\n",
-    "        \"191312/G-R_RG/*.nd2\",\n",
-    "        \"191312/R-G_GR/*.nd2\",\n",
-    "        \"191312/R-G_RG/*.nd2\",\n",
-    "    ],\n",
+    "    \"RFP-PENTA\": [\"200306/*.nd2\"],  # missing GFP-PENTA for all but one\n",
+    "    \"YFP-DUAL\": [\"200306/*.nd2\"],\n",
     "}"
    ]
   },
@@ -447,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
