--- a/paulssonlab/src/paulssonlab/projects/molecule_counting/Analysis_Old_NAO.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/molecule_counting/Analysis_Old_NAO.ipynb
@@ -186,6 +186,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%output size=250\n",
     "traces = data.iloc[:, :745].values\n",
     "idxs = np.random.permutation(traces.shape[0])\n",
@@ -435,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
