[molecule_counting] Fixed handling of phase channels (recognize both BF and Phase-Fluor). Added exclude parameter to photobleaching segmentation notebook. Fixed imports.

--- a/paulssonlab/src/paulssonlab/projects/molecule_counting/Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/molecule_counting/Segmentation.ipynb
@@ -55,8 +55,8 @@
     "# from segmentation import *\n",
     "# from util import *\n",
     "# from matriarch_stub import *\n",
-    "import segmentation\n",
-    "import matriarch_stub"
+    "import paulssonlab.projects.molecule_counting.segmentation as segmentation\n",
+    "import paulssonlab.projects.molecule_counting.matriarch_stub as matriarch_stub"
    ]
   },
   {
@@ -95,21 +95,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
     "    walltime=\"03:00:00\",\n",
     "    memory=\"6GB\",\n",
     "    local_directory=\"/tmp\",\n",
-    "    log_directory=\"/home/nao5/projects/paulssonlab/paulssonlab/src/paulssonlab/projects/molecule_counting/log\",\n",
+    "    log_directory=\"/home/jqs1/projects/paulssonlab/paulssonlab/src/paulssonlab/projects/molecule_counting/log\",\n",
     "    cores=1,\n",
     "    processes=1,\n",
     "    #     job_extra=[\"-x compute-a-16-163,compute-a-16-164\"],\n",
@@ -199,26 +190,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_filename = \"/n/scratch2/nao5\"\n",
-    "# filenames = glob(os.path.join(base_filename, '190922/*/*photobleaching*.nd2'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!du -hs /home/nao5/scratch/200306/*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!ls /home/jqs1/scratch/200305"
+    "base_filename = \"/n/scratch2/jqs1\"\n",
+    "# filenames = glob(os.path.join(base_filename, '200306/*.nd2'))"
    ]
   },
   {
@@ -230,9 +203,10 @@
     "# TODO: try segmenting everything in phase (to reduce bias of segmenting in different channels)\n",
     "# G_GR  G_RG  G-R_GR  G-R_RG  R-G_GR  R_GR  R-G_RG  R_RG\n",
     "seg_channel_to_files = {\n",
-    "    \"RFP-PENTA\": [\"200306/*.nd2\"],  # missing GFP-PENTA for all but one\n",
+    "    \"RFP-PENTA\": [\"200306/*.nd2\"],\n",
     "    \"YFP-DUAL\": [\"200306/*.nd2\"],\n",
-    "}"
+    "}\n",
+    "exclude = []"
    ]
   },
   {
@@ -241,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# segmentation.cluster_nd2_by_positions(glob(os.path.join(base_filename, '191312/R_GR/*.nd2')), ignored_channels=['BF'])"
+    "exclude = set([os.path.join(base_filename, f) for f in exclude])"
    ]
   },
   {
@@ -264,8 +238,10 @@
     "    for file_pattern in file_patterns:\n",
     "        data_graph[file_pattern] = {}\n",
     "        filenames = glob(os.path.join(base_filename, file_pattern))\n",
+    "        if exclude:\n",
+    "            filenames = list(set(filenames) - set(exclude))\n",
     "        clustered_filenames = segmentation.cluster_nd2_by_positions(\n",
-    "            filenames, ignored_channels=[\"BF\"]\n",
+    "            filenames, ignored_channels=[\"BF\", \"Phase-Fluor\"], progress_bar=tqdm\n",
     "        )\n",
     "        for channel_to_file in tqdm(clustered_filenames.values()):\n",
     "            if segmentation_channel not in channel_to_file:\n",
@@ -289,6 +265,7 @@
     "                    rechunk=True,\n",
     "                    segmentation_frame_filter=segmentation_frame_filter,\n",
     "                    segmentation_labels_filter=segmentation_labels_filter,\n",
+    "                    phase_channels=[\"BF\", \"Phase-Fluor\"],\n",
     "                )\n",
     "            rep = d[segmentation_channel][\n",
     "                0\n",
@@ -350,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"/n/groups/paulsson/jqs1/molecule-counting/200110photobleaching.pickle\"\n",
+    "filename = \"/n/groups/paulsson/jqs1/molecule-counting/200327photobleaching.pickle\"\n",
     "with open(filename, \"wb\") as f:\n",
     "    pickle.dump(data, f)"
    ]
@@ -382,17 +359,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%%time\n",
-    "for a in data.values():\n",
-    "    for b in tqdm(a.values()):\n",
-    "        b[\"regionprops\"] = matriarch_stub.get_regionprops(\n",
-    "            b[\"labels\"], b[\"segmentation_frame\"]\n",
-    "        )"
+    "## Quick look"
    ]
   },
   {
@@ -401,8 +371,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = data[\"191312/R-G_RG/*.nd2\"][\n",
-    "    \"/n/scratch2/jqs1/191312/R-G_RG/RG_100pct_100ms_100pct_100ms.nd2_0011.nd2\"\n",
+    "d = data[\"200306/*.nd2\"][\n",
+    "    \"/n/scratch2/jqs1/200306/mkate_200ms_100pct_mvenus_50ms_50.nd2_0050.nd2\"\n",
     "]"
    ]
   },
@@ -439,7 +409,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(np.log(d[\"traces\"][\"RFP-PENTA\"][\"mean\"].T))"
+    "d[\"traces\"][\"Phase-Fluor\"][\"mean\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.log(d[\"traces\"][\"YFP-DUAL\"][\"mean\"].T))"
    ]
   },
   {
