[molecule_counting] Fixed segmenting in multiple channels.

--- a/paulssonlab/src/paulssonlab/projects/molecule_counting/Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/molecule_counting/Segmentation.ipynb
@@ -233,15 +233,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ignore_channels = [\"BF\", \"Phase-Fluor\"]\n",
     "data_graph = {}\n",
     "for segmentation_channel, file_patterns in tqdm(seg_channel_to_files.items()):\n",
     "    for file_pattern in file_patterns:\n",
-    "        data_graph[file_pattern] = {}\n",
+    "        data_graph.setdefault(file_pattern, {})\n",
     "        filenames = glob(os.path.join(base_filename, file_pattern))\n",
     "        if exclude:\n",
     "            filenames = list(set(filenames) - set(exclude))\n",
     "        clustered_filenames = segmentation.cluster_nd2_by_positions(\n",
-    "            filenames, ignored_channels=[\"BF\", \"Phase-Fluor\"], progress_bar=tqdm\n",
+    "            filenames, ignore_channels=ignore_channels, progress_bar=tqdm\n",
     "        )\n",
     "        for channel_to_file in tqdm(clustered_filenames.values()):\n",
     "            if segmentation_channel not in channel_to_file:\n",
@@ -252,7 +253,7 @@
     "                )\n",
     "                continue\n",
     "            segmentation_filename = channel_to_file[segmentation_channel]\n",
-    "            channels = list(set(channel_to_file.keys()) - set([\"BF\"]))\n",
+    "            channels = list(set(channel_to_file.keys()) - set(ignore_channels))\n",
     "            d = {}\n",
     "            for channel in channels:\n",
     "                d[channel] = segmentation.process_photobleaching_file(\n",
@@ -279,7 +280,9 @@
     "                \"traces\": {channel: d[channel][0][\"traces\"] for channel in channels},\n",
     "                \"photobleaching_filenames\": channel_to_file,\n",
     "            }\n",
-    "            data_graph[file_pattern][segmentation_filename] = seg_data"
+    "            data_graph[file_pattern][\n",
+    "                (segmentation_filename, segmentation_channel)\n",
+    "            ] = seg_data"
    ]
   },
   {
@@ -327,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"/n/groups/paulsson/jqs1/molecule-counting/200327photobleaching.pickle\"\n",
+    "filename = \"/n/groups/paulsson/jqs1/molecule-counting/200329photobleaching.pickle\"\n",
     "with open(filename, \"wb\") as f:\n",
     "    pickle.dump(data, f)"
    ]
@@ -338,11 +341,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "\n",
-    "data = pickle.load(\n",
-    "    open(\"/n/groups/paulsson/jqs1/molecule-counting/200109photobleaching.pickle\", \"rb\")\n",
-    ")"
+    "filename = \"/n/groups/paulsson/jqs1/molecule-counting/200329photobleaching.pickle\"\n",
+    "data = pickle.load(open(filename, \"rb\"))"
    ]
   },
   {
