[cloning,shenker/cloning] import_addgene imports Addgene to Google Sheets/Drive.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/Golden gate parts ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/Golden gate parts ingest.ipynb
@@ -67,10 +67,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# dnaplotlib"
+    "gc = pygsheets.authorize(service_account_file=\"credentials.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col = workflow.get_strain_collection_sheets(gc.drive.service, \"LIB\")\n",
+    "col"
    ]
   },
   {
@@ -95,28 +107,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gc = pygsheets.authorize(service_account_file=\"credentials.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "api.google.get_drive_by_path(\n",
     "    gc.drive.service, \"Strains/LIB_Collection\", root=PAULSSON_GDRIVE\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "col = workflow.get_strain_collection_sheets(gc.drive.service, \"LIB\")\n",
-    "col"
    ]
   },
   {
@@ -203,15 +196,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -242,10 +226,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://www.addgene.org/108254/\"\n",
-    "# url = 'https://www.addgene.org/108537/'\n",
+    "# url = \"https://www.addgene.org/108254/\"\n",
+    "url = \"https://www.addgene.org/108537/\"\n",
     "# url = 'http://www.addgene.org/121010/'\n",
-    "api.get_addgene_info(url)"
+    "api.addgene.get_addgene(url)"
    ]
   },
   {
@@ -256,7 +240,27 @@
    "source": [
     "# url = 'https://www.addgene.org/kits/marionette-sensor-collection/#kit-contents'\n",
     "url = \"http://www.addgene.org/kits/murray-cidar-moclo-v1/\"\n",
-    "kit = api.get_addgene_kit(url, include_info=False, include_sequences=False)"
+    "kit = api.addgene.get_addgene(url, include_details=True, include_sequences=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kit[\"wells\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gb = api.get_genbank(\n",
+    "    \"https://media.addgene.org/snapgene-media/v1.6.2-0-g4b4ed87/sequences/05/72/230572/addgene-plasmid-120934-sequence-230572.gbk\"\n",
+    ")"
    ]
   },
   {
@@ -272,6 +276,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Genbank parsing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Benchling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -280,6 +298,243 @@
     "dna = genbank_to_benchling(session, gb, \"seq3\", folder.id, accession=\"addgene_blah\")\n",
     "dna.save()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Densmore/3G/JUMP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "densmore_kit = \"http://www.addgene.org/kits/densmore-cidar-moclo/\"\n",
+    "threeg_kit = \"http://www.addgene.org/kits/murray-cidar-moclo-v1/\"\n",
+    "marionette_kit = \"https://www.addgene.org/kits/marionette-sensor-collection/\"\n",
+    "jump_plasmids = [\n",
+    "    \"https://www.addgene.org/126956/\",\n",
+    "    \"https://www.addgene.org/126959/\",\n",
+    "    \"https://www.addgene.org/126960/\",\n",
+    "    \"https://www.addgene.org/126961/\",\n",
+    "    \"https://www.addgene.org/126962/\",\n",
+    "    \"https://www.addgene.org/126963/\",\n",
+    "    \"https://www.addgene.org/126964/\",\n",
+    "    \"https://www.addgene.org/126965/\",\n",
+    "    \"https://www.addgene.org/126966/\",\n",
+    "    \"https://www.addgene.org/126967/\",\n",
+    "    \"https://www.addgene.org/126973/\",\n",
+    "    \"https://www.addgene.org/126974/\",\n",
+    "    \"https://www.addgene.org/126975/\",\n",
+    "    \"https://www.addgene.org/126976/\",\n",
+    "    \"https://www.addgene.org/126991/\",\n",
+    "    \"https://www.addgene.org/126996/\",\n",
+    "    \"https://www.addgene.org/127015/\",\n",
+    "    \"https://www.addgene.org/127047/\",\n",
+    "    \"https://www.addgene.org/127051/\",\n",
+    "    \"https://www.addgene.org/127025/\",\n",
+    "    \"https://www.addgene.org/127000/\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strain_sheet = gc.open_by_key(col[\"strains\"]).worksheet()\n",
+    "plasmid_sheet = gc.open_by_key(col[\"plasmids\"]).worksheet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = workflow.import_addgene(\n",
+    "    densmore_kit, strain_sheet, plasmid_sheet, col[\"plasmid_maps\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = workflow.import_addgene(\n",
+    "    threeg_kit, strain_sheet, plasmid_sheet, col[\"plasmid_maps\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = workflow.import_addgene(\n",
+    "    marionette_kit, strain_sheet, plasmid_sheet, col[\"plasmid_maps\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zz = workflow.import_addgene(\n",
+    "    jump_plasmids, strain_sheet, plasmid_sheet, col[\"plasmid_maps\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "addgene_plasmids = [\n",
+    "    f\"https://www.addgene.org/{catalog}/\" for catalog in addgene_catalog\n",
+    "] + [densmore_kit]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "addgene_data = workflow.import_addgene(\n",
+    "    addgene_plasmids, strain_sheet, plasmid_sheet, col[\"plasmid_maps\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lab Obs ordering site"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import paulssonlab.api.labops as labops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser = await labops.login_harvard(\n",
+    "    config[\"ecommons\"][\"username\"],\n",
+    "    config[\"ecommons\"][\"password\"],\n",
+    "    service=\"https://sysbiolabops.hms.harvard.edu/casservice\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "addgene_orders = await labops.get_orders(browser, vendor=\"Addgene (26)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_addgene = addgene_orders[\n",
+    "    addgene_orders[\"Name\"].isin([\"Jacob Shenker\", \"Noah Olsman\"])\n",
+    "][\"Catalog #\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "addgene_catalog = my_addgene.apply(\n",
+    "    lambda x: int(re.search(r\"(\\d+)$\", x).group(1))\n",
+    ").values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "addgene_orders[~addgene_orders[\"Name\"].isin([\"Jacob Shenker\", \"Daniel Eaton\"])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "addgene_orders[\"Name\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## All orders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prices = df.loc[:, \"Total Price\"]\n",
+    "prices = prices.str.replace(\",\", \"\")\n",
+    "prices = prices.str.replace(\"$\", \"\")\n",
+    "prices = prices.astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prices.hist(bins=100, log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
